Create a header, bar and profile

--- a/clone-twitter/index.html
+++ b/clone-twitter/index.html
@@ -29,5 +29,51 @@
     <div class="banner">
         
     </div>
+
+    <div class="bar">
+        <div class="content">
+            <ul>
+                <li class="active">
+                    <span>Tweets</span>
+                    <strong>1234</strong>
+                </li>
+                <li>
+                    <span>Followings</span>
+                    <strong>654</strong>
+                </li>
+                <li>
+                    <span>Followers</span>
+                    <strong>84</strong>
+                </li>
+                <li>
+                    <span>Favorites</span>
+                    <strong>98</strong>
+                </li>
+            </ul>
+    
+            <div class="actions">
+                <button>Follow</button>
+                <img src="./assets/more.svg" alt="more options" width="18px">
+            </div>
+        </div>
+    </div>
+
+    <div class="wrapper-content content">
+        <aside class="profile">
+            <img class="avatar" src="./assets/avatar.jpeg" alt="Lucas Soares">
+            <h1>Lucas Soares</h1>
+            <span>@fbsoares-lu</span>
+            <p>Web, Design & Rock Partner/UI Designer</p>
+
+            <ul>
+                <li><img src="./assets/place.svg" alt="Place" width="16px"> Pernambuco, Brazil</li>
+                <li><img src="./assets/url.svg" alt="Url" width="16px"> fbsoares-lu</li>
+                <li><img src="./assets/joined.svg" alt="Join" width="16px"> Joined June 2018</li>
+                <li><img src="./assets/born.svg" alt="Born" width="16px"> Born the 24th of Octuber 1997</li>
+            </ul>
+        </aside>
+        <section class="timeline">Timeline</section>
+        <aside class="widgets">Widgets</aside>
+    </div>
 </body>
 </html>
