--- a/clone-twitter/index.html
+++ b/clone-twitter/index.html
@@ -65,15 +65,96 @@
             <span>@fbsoares-lu</span>
             <p>Web, Design & Rock Partner/UI Designer</p>
 
-            <ul>
+            <ul class="list">
                 <li><img src="./assets/place.svg" alt="Place" width="16px"> Pernambuco, Brazil</li>
                 <li><img src="./assets/url.svg" alt="Url" width="16px"> fbsoares-lu</li>
                 <li><img src="./assets/joined.svg" alt="Join" width="16px"> Joined June 2018</li>
                 <li><img src="./assets/born.svg" alt="Born" width="16px"> Born the 24th of Octuber 1997</li>
             </ul>
+            
+            <div class="widget followers">
+                <strong><img src="./assets/user.svg" alt="followers" width="16px"> 73 followers that you know</strong>
+
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="widget images">
+                <strong><img src="./assets/photo.svg" alt="images" width="16px"> 296 Photos and videos</strong>
+
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </aside>
-        <section class="timeline">Timeline</section>
-        <aside class="widgets">Widgets</aside>
+        <section class="timeline">
+            <nav>
+                <a class="active" href="">Tweets</a>
+                <a href="">Tweets and replies</a>
+                <a href="">Medias</a>
+            </nav>
+
+            <ul class="tweets">
+                <li></li>
+            </ul>
+        </section>
+
+        <aside class="widgets">
+            <div class="widget follow">
+                <div class="title">
+                    <strong>Who to follow</strong>
+                    <a href="/">Refresh</a>
+                    <a href="/">View all</a>
+                </div>
+
+                <ul>
+                    <li>
+                        <div class="profile">
+                            <img src="./assets/avatar.jpeg" alt="avatar">
+                            <div class="info">
+                                <strong>Diego <span>@diego</span></strong>
+                                <button>Follow</button>
+                            </div>
+                        </div>
+                        <a href="/">x</a>
+                    </li>
+                    <li>
+                        <div class="profile">
+                            <img src="./assets/avatar.jpeg" alt="avatar">
+                            <div class="info">
+                                <strong>Diego <span>@diego</span></strong>
+                                <button>Follow</button>
+                            </div>
+                        </div>
+                        <a href="/">x</a>
+                    </li>
+                    <li>
+                        <div class="profile">
+                            <img src="./assets/avatar.jpeg" alt="avatar">
+                            <div class="info">
+                                <strong>Diego <span>@diego</span></strong>
+                                <button>Follow</button>
+                            </div>
+                        </div>
+                        <a href="/">x</a>
+                    </li>
+                </ul>
+            </div>
+        </aside>
     </div>
 </body>
 </html>
